--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header >
+      <div><a href="index.html"><img src="./image/logob.png" width="100px" alt=""></a></div>
         <div id="barra" class="col-md-6">
             <nav class="navbar navbar-expand-lg navbar-light ">
-              <a href="index.html"><img src="./image/logob.png" width="100px" alt=""></a>
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                                 <a class="nav-link active" aria-current="page" href="./pages/pago.html">Carrito</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Contacto</a>
+                                <a class="nav-link active" aria-current="page" href="./pages/finalizar.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -89,5 +89,6 @@
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <script src="./js/main.js"></script>
+      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
