--- a/pages/pago.html
+++ b/pages/pago.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@300&family=Edu+TAS+Beginner&family=Nunito:wght@300&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <header >
+      <div><a href="/index.html"><img src="/image/Logob.png" width="100px" alt=""></a></div>
         <div id="barra" class="col-md-6">
             <nav class="navbar navbar-expand-lg navbar-light ">
-              <a href="../index.html"><img src="../image/logob.png" width="100px" alt=""></a>
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -40,7 +41,7 @@
       </header>
       <main id="contenedor">
         <div id="vaciar"><h4 class ="text-center display-6" style="margin-top: 20px; font-size: 26px; text-transform:uppercase; justify-self:center; margin-bottom: 40px; font-weight: bold;">producto/os elegidos</h4>
-          <img src="/image/tacho.png" class="btn btn-success" width="55px" title="Vaciar Carrito" style="align-self:center; justify-self:center" alt="">
+          <img src="/image/carro.png" class="btn" width="65px" title="Vaciar Carrito" style="align-self:center; justify-self:center" alt="">
         </div>
         <div id="productos" class="row" style="margin-left: 50px; margin-right: 50px"></div>
         <div id="extras" class="row" style="margin-left: 50px; margin-right: 50px">
@@ -89,8 +90,10 @@
           © 2022 Copyright: Todos los derechos reservados <strong>Creado por EricMza90</strong>
         </div>
       </footer>
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <script src="../js/main.js"></script>
       <script src="../js/carrito.js"></script>
+      
 </body>
 </html>
