--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <main id="contenedor">
         <h4 class ="text-center display-6" style="margin-top: 20px; font-size: 26px; text-transform:uppercase; margin-bottom: 40px; font-weight: bold;">Nuestros Vinos</h4>
         <div id="productos" class="row" style="margin-left: 50px; margin-right: 50px;"></div>
-        <div id="extras" class="row" style="margin-left: 50px; margin-right: 50px">
-          <div><img src="./image/envio_gratis.png" class="bg-light" style="height: 100px; width:200px; margin-top: 30px;" alt=""></div>
-          <div><img src="./image/compra-segura.png" class="bg-light" style="height: 100px; width:200px; margin-top: 30px;" alt=""></div>
-          <div><img src="./image/mejor-precio.png" class="bg-light" style="height: 100px; width:200px; margin-top: 30px;" alt=""></div>
+        <div id="extras" style="margin-left: 50px; margin-right: 50px">
+          <div><img class="img_extras" src="./image/envio_gratis.png"  alt=""></div>
+          <div><img class="img_extras" src="./image/compra-segura.png"  alt=""></div>
+          <div><img class="img_extras" src="./image/mejor-precio.png"  alt=""></div>
         </div>
       </main>
     <footer class="text-white text-center">
@@ -58,7 +58,7 @@
               </div>
               <div>
                 <div class="form-outline">
-                  <input type="email" id="form5Example27" class="form-control" />
+                  <input type="email" id="form5Example27" class="form-control"/>
                   <label class="form-label " for="form5Example27">Email</label>
                 </div>
               </div>
@@ -84,7 +84,8 @@
           </div>
         </div>
         <div class="text-center">
-          © 2022 Copyright: Todos los derechos reservados <strong>Creado por EricMza90</strong>
+          © 2022 Copyright: Todos los derechos reservados
+          <strong>Creado por EricMza90</strong>
         </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
