--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header >
-      <div><a href="index.html"><img src="./image/logob.png" width="100px" alt=""></a></div>
+      <div><a href="index.html"><img src="../image/logob.png" width="100px" alt=""></a></div>
         <div id="barra" class="col-md-6">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div>
