--- a/pages/pago.html
+++ b/pages/pago.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header >
-      <div><a href="/index.html"><img src="../image/Logob.png" width="100px" alt=""></a></div>
+      <div><a href="../index.html"><img src="../image/Logob.png" width="100px" alt=""></a></div>
         <div id="barra" class="col-md-6">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div>
@@ -22,7 +22,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="padding-left: 5px; padding-right: 5px;" >
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="pago.html">Carrito</a>
