ajuste imagenes carrito

--- a/pages/pago.html
+++ b/pages/pago.html
@@ -36,12 +36,12 @@
             </nav>
         </div>
        <div class="col-md-6 d-flex align-item-center justify-content-end">
-        <a href="./pago.html" id="btn-cart" class ="carrito"></a>
+        <a href="./pago.html" id="btn-cart" class ="carrito"><img src="../image/carrito.png" alt=""></a>
        </div>
       </header>
       <main id="contenedor">
         <div id="vaciar"><h4 class ="text-center display-6" style="margin-top: 20px; font-size: 26px; text-transform:uppercase; justify-self:center; margin-bottom: 40px; font-weight: bold;">producto/os elegidos</h4>
-          <img src="../image/carrito.png" class="btn" width="65px" title="Vaciar Carrito" style="align-self:center; justify-self:center" alt="">
+          <img src="../image/carro.png" class="btn" width="65px" title="Vaciar Carrito" style="align-self:center; justify-self:center" alt="">
         </div>
         <div id="productos" class="row" style="margin-left: 50px; margin-right: 50px"></div>
         <div id="extras" class="row" style="margin-left: 50px; margin-right: 50px">
