--- a/pages/pago.html
+++ b/pages/pago.html
@@ -36,7 +36,7 @@
             </nav>
         </div>
        <div class="col-md-6 d-flex align-item-center justify-content-end">
-        <a href="./pago.html" id="btn-cart" class ="carrito"><img src="../image/carrito.png" alt=""></a>
+        <a href="./pago.html" id="btn-cart" class ="carrito"><img src="../image/cart.png" alt=""></a>
        </div>
       </header>
       <main id="contenedor">
