--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="padding-left: 5px; padding-right: 5px;" >
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">TIENDA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./pages/pago.html">Carrito</a>
+                                <a class="nav-link active" aria-current="page" href="./pages/pago.html">CARRITO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./pages/finalizar.html">Contacto</a>
+                                <a class="nav-link active" aria-current="page" href="./pages/finalizar.html">CONTACTO</a>
                             </li>
                         </ul>
                     </div>
@@ -42,9 +42,9 @@
         <h4 class ="text-center display-6" style="margin-top: 20px; font-size: 26px; text-transform:uppercase; margin-bottom: 40px; font-weight: bold;">Nuestros Vinos</h4>
         <div id="productos" class="row" style="margin-left: 50px; margin-right: 50px;"></div>
         <div id="extras" style="margin-left: 50px; margin-right: 50px">
-          <div><img class="img_extras" src="./image/envio_gratis.png"  alt=""></div>
-          <div><img class="img_extras" src="./image/compra-segura.png"  alt=""></div>
-          <div><img class="img_extras" src="./image/mejor-precio.png"  alt=""></div>
+          <div class="img_extras" ><img src="./image/entrega.png" height="70" width="70" style="margin-top: 10px;" alt=""><p class="text-center" style="text-transform:uppercase; color: white; margin-top: 10px; font-weight: bold;">Envios Gratis a Mendoza en 24 a 72 hrs</p></div>
+          <div class="img_extras" ><img src="./image/copa-de-vino.png" height="70" width="70" style="margin-top: 10px;" alt=""><p class="text-center" style="text-transform:uppercase; color: white; margin-top: 10px; font-weight: bold;">La mejor seleccion de vinos</p></div>
+          <div class="img_extras" ><img src="./image/price.png" height="70" width="70" style="margin-top: 10px;" alt=""><p class="text-center" style="text-transform:uppercase; color: white; margin-top: 10px; font-weight: bold;">el mejor precio garantizado</p></div>
         </div>
       </main>
     <footer class="text-white text-center">
