--- a/pages/pago.html
+++ b/pages/pago.html
@@ -22,13 +22,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="padding-left: 5px; padding-right: 5px;" >
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html">TIENDA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="pago.html">Carrito</a>
+                                <a class="nav-link active" aria-current="page" href="pago.html">CARRITO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="">Contacto</a>
+                                <a class="nav-link active" aria-current="page" href="">CONTACTO</a>
                             </li>
                         </ul>
                     </div>
@@ -41,13 +41,13 @@
       </header>
       <main id="contenedor">
         <div id="vaciar" ><h4 class ="text-center display-6" style="margin-top: 20px; font-size: 26px; text-transform:uppercase; justify-self:center; margin-bottom: 40px; font-weight: bold;">producto/os elegidos</h4>
-          <img id="vaciar_cart"  src="../image/carro.png" class="btn" width="65px" title="Vaciar Carrito" style="align-self:center; justify-self:center" alt="">
+          <a href="" id="btn-carro" class ="carrito"><img src="../image/carro.png" width="50" alt="" title="Vaciar Carrito"></a>
         </div>
         <div id="productos" class="row" style="margin-left: 50px; margin-right: 50px"></div>
-        <div id="extras" class="row" style="margin-left: 50px; margin-right: 50px">
-          <div><img src="../image/envio_gratis.png" class="bg-light" style="height: 100px; width:200px; margin-top: 30px;" alt=""></div>
-          <div><img src="../image/compra-segura.png" class="bg-light" style="height: 100px; width:200px; margin-top: 30px;" alt=""></div>
-          <div><img src="../image/mejor-precio.png" class="bg-light" style="height: 100px; width:200px; margin-top: 30px;" alt=""></div>
+        <div id="extras" style="margin-left: 50px; margin-right: 50px">
+          <div class="img_extras" ><img src="../image/entrega.png" height="70" width="70" style="margin-top: 10px;" alt=""><p class="text-center" style="text-transform:uppercase; color: white; margin-top: 10px; font-weight: bold;">Envios Gratis a Mendoza en 24 a 72 hrs</p></div>
+          <div class="img_extras" ><img src="../image/copa-de-vino.png" height="70" width="70" style="margin-top: 10px;"  alt=""><p class="text-center" style="text-transform:uppercase;  color: white; margin-top: 10px; font-weight: bold;">La mejor seleccion de vinos</p></div>
+          <div class="img_extras" ><img src="../image/price.png" height="70" width="70" style="margin-top: 10px;" alt=""><p class="text-center" style="text-transform:uppercase; color: white; margin-top: 10px; font-weight: bold;">el mejor precio garantizado</p></div>
         </div>
       </main>
     <footer class="text-white text-center">
